// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic text 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

abbr.c0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c0 {
  font-style: italic;
}

kbd.c0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c0 {
  font-weight: bold;
}

sub.c0,
sup.c0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c0,
u.c0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c0,
cite.c0,
var.c0,
em.c0 {
  font-style: italic;
}

kbd.c0,
pre.c0,
samp.c0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c0 .c2 {
  top: 0.1em;
}

<span
  class="c0 c1"
>
  test
</span>
`;

exports[`renders correctly for text with a another element 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

abbr.c0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c0 {
  font-style: italic;
}

kbd.c0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c0 {
  font-weight: bold;
}

sub.c0,
sup.c0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c0,
u.c0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c0,
cite.c0,
var.c0,
em.c0 {
  font-style: italic;
}

kbd.c0,
pre.c0,
samp.c0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c0 .c2 {
  top: 0.1em;
}

<strong
  class="c0 c1"
  color="primary"
>
  test
</strong>
`;

exports[`renders correctly for text with a color 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

abbr.c0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c0 {
  font-style: italic;
}

kbd.c0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c0 {
  font-weight: bold;
}

sub.c0,
sup.c0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c0,
u.c0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c0,
cite.c0,
var.c0,
em.c0 {
  font-style: italic;
}

kbd.c0,
pre.c0,
samp.c0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c0 .c2 {
  top: 0.1em;
}

<span
  class="c0 c1"
  color="primary"
>
  test
</span>
`;
